<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/mainActivityFragment"
            android:title="@string/menu_desktop"
            android:icon="@drawable/ic_baseline_home_24"/>
        <item
            android:id="@+id/invoiceMainView2"
            android:title="@string/menu_invoices"
            android:icon="@drawable/ic_invoices"/>
        <item
            android:id="@+id/addInvoice2"
            android:title="@string/add_invoice"
            android:icon="@drawable/ic_baseline_add_24"/>
        <item
            android:id="@+id/store"
            android:title="@string/menu_storehouse"
            android:icon="@drawable/ic_store"/>
        <item
            android:id="@+id/contractors"
            android:title="@string/menu_contractors"
            android:icon="@drawable/ic_contractors"/>
        <item
            android:id="@+id/settings"
            android:title="@string/menu_settings"
            android:icon="@drawable/ic_settings"/>
        <item
            android:id="@+id/help"
            android:title="@string/menu_help"
            android:icon="@drawable/ic_help"/>
        <item
            android:id="@+id/information"
            android:title="@string/menu_information"
            android:icon="@drawable/ic_info" />
    </group>
</menu>